--- a/templates/macros/archive.html
+++ b/templates/macros/archive.html
@@ -1,9 +1,9 @@
 {% macro render_post(post, from_index=false) %}
   <div class="blog-post">
   {% if from_index %}
-    <h2>{{ post.title }} <a href="{{ post|url }}">[HTML]</a></h2>
+    <h2><a href="{{ post|url }}">{{ post.title }}</a></h2>
   {% else %}
-    <h2>{{ post.title }}</h2>
+    <h2>{{ post.title }} [<a href="{{ post|url }}">HTML</a>]</h2>
   {% endif %}
   <p class="meta">
     Published on {{ post.pub_date }}
@@ -11,6 +11,20 @@
   {% for child in post.children %}
     {{ child.body }}
   {% endfor %}
+  </div>
+  {% endmacro %}
+
+{% macro render_text_post(post, from_index=false) %}
+  <div class="blog-post">
+  {% if from_index %}
+    <h2><a href="{{ post|url }}">{{ post.title }}</a></h2>
+  {% else %}
+    <h2>{{ post.title }} [<a href="{{ "../"|url }}">HTML</a>]</h2>
+  {% endif %}
+  <p class="meta">
+    Published on {{ post.pub_date }}
+  </p>
+  {{ post.body }}
   </div>
 {% endmacro %}
 
