--- a/assets/scss/_newsletter.scss
+++ b/assets/scss/_newsletter.scss
@@ -42,10 +42,14 @@ footer .border{
   border-bottom: 1px solid rgba(255,255,255,0.3) !important;
 }
 
+footer {
+  padding-top: 10em;
+}
+
 #wrapper {
   width: 100%;
-  position: absolute;
-  bottom: 0px;
+  position: relative !important;
+  bottom: 0;
 }
 
 
