--- a/templates/intro.html
+++ b/templates/intro.html
@@ -2,59 +2,35 @@
 {% block title %}{{ this.title }}{% endblock %}
 {% block body %}
 {{ this.body }}
-<div class="row mx-auto">
-  <div class="col-10">
-    <p class="text-center">
+<div class="row mb-1">
+  <div class="col-12">
+    <h6>
       Sign Up For Tor News
-    </p>
-    <p class="text-center">
-      Get updates and opportunities from across the organization and community
-    </p>
+    </h6>
+    <h2>
+      Get updates and opportunities from across the organization and community.
+    </h2>
   </div>
 </div>
-<div class="row mx-auto">
-  <div class="col-10 text-center">
-    <h2 class="newsletter-title">Your Info</h2>
-  </div>
-</div>
-<div class="row mx-auto">
-  <div class="col-10 text-center">
-    <p class="required-field">
-      * required fields
+<div class="row mb-1">
+  <div class="col-12">
+    <p>
+      The information you provide here will only be used to send you updates
+      and opportunities from Tor. You can unsubscribe at any time. We will not
+      publish, sell, trade, share, or rent any information about you. Never.
     </p>
   </div>
 </div>
-<div class="row mx-auto">
-  <div class="col-10">
-    <form action="https://donate.torproject.org/subscription-request" method="POST">
-      <div class="form-group row">
-	<div class="col">
-	  <input class="form-control form-control-lg" id="firstName" name="firstName" placeholder="First Name" value="" type="text">
-	</div>
-	<div class="col">
-	  <input class="form-control form-control-lg" id="lastName" name="lastName" placeholder="Last Name" value="" type="text">
-	</div>
-      </div>
-      <div class="form-group row">
-	<div class="col">
-	  <input class="form-control form-control-lg form-required" id="email" name="email" placeholder="* Email Address" value="" type="email">
-	</div>
-      </div>
-      <div class="row">
-	<div class="col">
-	  <p class="text-justify">
-	    The information you provide here will only be used to send you updates and opportunities from Tor. You can unsubscribe at any time. We will not publish, sell, trade, share, or rent any information about you.
-	  </p>
-	</div>
-      </div>
-      <div class="row">
-	<div class="col-4"></div>
-	<div class="col-4">
-	  <input class="donate btn btn-lg btn-success btn-block" value="Join" type="submit">
-	</div>
-	<div class="col-4"></div>
-      </div>
-    </form>
+<div class="row mb-1">
+  <form action="https://donate.torproject.org/subscription-request" method="POST">
+  <div class="col-8">
+    <input class="form-control form-control-lg form-required" id="email"
+      name="email" placeholder="* Email Address" value="" type="email" />
   </div>
+  <div class="col-4">
+    <input class="donate btn btn-lg btn-success btn-block" value="Join"
+      type="submit" />
+  </div>
+  </form>
 </div>
 {% endblock %}
