Add newsletter new intro layout

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-dark footer">
+<div class="container-fluid bg-secondary footer">
   <div class="row">
     <div class="col-12 d-flex justify-content-center">
       <div class="col-sm-6 offset-lx-1 offset-sm-0 mt-5">
