--- a/assets/scss/_tor.scss
+++ b/assets/scss/_tor.scss
@@ -2,9 +2,9 @@
  * Base structure
  */
 
-/* Move down content because we have a fixed navbar that is 4.5rem tall */
+/* Move down content because we have a fixed navbar that is 3.5rem tall */
 .page {
-  padding-top: 4.5rem;
+  padding-top: 3.5rem;
 }
 
 /* Reset */
@@ -58,31 +58,6 @@
   url('fonts/TorIcons/tor-icons.ttf') format('truetype'),
   url('fonts/TorIcons/tor-icons.svg?#tor-icons') format('svg');
 }
-
-.font-family-serif {
-  font-family: $font-family-serif !important;
-}
-
-.font-weight-light  { font-family: Source Sans Pro Light }
-
-.font-weight-bold   { font-family: Source Sans Pro Bold  }
-
-h6 {
-  text-transform: uppercase;
-  font-weight: bold;
-  color: $purple;
-}
-p {
-  font-size: 1.3rem; // We need at least 18px minuim +_+
-  color: $gray-900;
-  line-height: 2rem;
-}
-mark,.mark {
-  color: $purple;
-}
-
-
-/** Icons **/
 
 .ti:before {
     font-family: Tor Icons !important;
@@ -182,12 +157,54 @@ mark,.mark {
     content: "\f11e";
 }
 
+.display-1,
+.display-2,
+.display-3,
+.display-4 {
+    font-family: Source Sans Pro Light;
+}
+
+.font-family-serif {
+  font-family: $font-family-serif !important;
+}
+.font-weight-light {
+  font-family: Source Sans Pro Light
+}
+.font-weight-bold {
+  font-family: Source Sans Pro Bold
+ }
+
+small, .small{
+  font-size: 90%;
+}
+
+h6 {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: $purple;
+}
+p {
+  font-size: 1.3rem; // We need at least 18px minuim +_+
+  color: $gray-900;
+  line-height: 2rem;
+}
+.display-5 {
+  font-size: 1.5em;
+}
+.display-6 {
+  font-size: 1.3em
+}
+mark, .mark {
+  color: $purple;
+}
+
 .bd-sidebar{
   border: 0 !important;
 }
 .bd-toc{
   order: 0 !important;
 }
+
 #components-nav .nav-pills .nav-link,
 #visuals-nav .nav-pills .nav-link{
   border-radius: 0;
@@ -200,11 +217,6 @@ mark,.mark {
   font-weight: bold;
 }
 
-
-.jumbotron {
-  margin-top: -50px;
-}
-
 /*
  * Nav
  */
@@ -215,7 +227,7 @@ mark,.mark {
 }
 
 .navbar-brand {
-  /*padding-left: 80px;*/
+  padding-left: 80px;
   span {
     font-size: 0.6em;
     display: flex;
@@ -225,27 +237,31 @@ mark,.mark {
 /*
  * Sidebar
  */
-
-
-.sidetopics {
+.sidebar {
+  position: fixed;
+  top: 51px;
+  bottom: 0;
+  left: 0;
   z-index: 1000;
   padding: 20px 0;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
   border-right: 1px solid #eee;
 }
 
-.sidetopics .nav {
+.sidebar .nav {
   margin-bottom: 20px;
 }
 
-.sidetopics .nav-item {
+.sidebar .nav-item {
   width: 100%;
 }
 
-.sidetopics .nav-item + .nav-item {
+.sidebar .nav-item + .nav-item {
   margin-left: 0;
 }
 
-.sidetopics .nav-link {
+.sidebar .nav-link {
   border-radius: 0;
 }
 
@@ -329,14 +345,6 @@ mark,.mark {
   margin-top: -.25rem;
 }
 
-// Code
-pre {
-  padding: 0.5rem;
-  margin-top: 1rem;
-  color: $pre-color;
-  background: $code-bg;
-}
-
 // Variations
 @mixin bs-callout-variant($color) {
   border-left-color: $color;
@@ -352,7 +360,6 @@ pre {
 
 // All levels of nav
 .bd-sidebar .nav > li > a {
-  font-size: 100%;
   color: rgba(0, 0, 0, .85);
 }
 
@@ -444,18 +451,8 @@ pre {
   user-select: none;
 }
 
-
 .text-primary-light {
   color: $bd-purple-light;
-}
-
-#topics {
-  margin: 0 auto;
-  display: block;
-  overflow-y: scroll;
-  height: 950px;
-  width: 97;
-  scroll-behavior: smooth;
 }
 
 .dropdown{
@@ -470,76 +467,31 @@ pre {
     display: block;
 }
 
-label {
-  cursor: pointer;
-}
-
-#menu-toggle {
-  display: none; /* hide the checkbox */
-}
-
-#nav-toggle {
-  display: none; /* hide the checkbox */
-}
-
-.side-toggler {
-  float:right !important;
-}
-
-#menu-toggle:checked + .burger-menu {
-  display: block;
-}
-
-#nav-toggle:checked + .hamburger-menu {
-  display: block;
-}
-
-.navbar-toggler:hover .chevron-up {
-    display: block !important;
-}
-
-.navbar-toggler:hover .chevron-down {
-    display: none;
-}
-
-a.side-nav.active {
-    color: $primary !important;
-}
-
-.smalltopics {
-    display: none;
-}
-
-.chevron {
-    height: 50px;
-    width: 50px;
-    margin: -10px -1px 1px -1px;
-}
-
-.chevron-up {
+.mobile {
     display: none !important;
-    top: 10px !important;
-}
-
-.chevron-down {
-    display: block;
-    top: 10px !important;
 }
 
 // Small devices (landscape phones, less than 768px)
 @include media-breakpoint-down(sm) {
-    nav.sidetopics {
-        display: none !important;
-	visibility: hidden !important;
+    .mobile {
+        display: block !important;
+	padding-top: 50px;
     }
 
-    nav.smalltopics {
-        display: block;
-	width:100%;
-	position: sticky;
-	padding-top: inherit;
+    .display-1 {
+      font-size: 4rem;
     }
 
+    .display-2 {
+      font-size: 3.5rem;
+    }
 
+    .display-3{
+      font-size: 2.5rem;
+    }
+
+    .display-4{
+      font-size: 2rem;
+    }
 
 }
