--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,11 +12,17 @@
   <div class="collapse navbar-collapse hamburger-menu" id="navbarSupportedContent">
     <div class="mx-auto pt-2 pl-4">
       <ul class="navbar-nav">
-	{% set menubag = 'menu+' + this.alt %}
+	      {% set menubag = 'menu+' + this.alt %}
       	{% for id, item in bag(menubag).items() %}
-	<li{% if this.is_child_of(item.path) %} class="nav-item active" {% else %} class="nav-item"{% endif %}>
-          <a class="nav-link" href="{{ item.path|url }}">{{ item.label }}
-            {% if this.is_child_of(item.path) %}
+      	<li{% if this.is_child_of(item.path) %} class="nav-item active" {% else %} class="nav-item"{% endif %}>
+          {% set link = site.get(item.path) %}
+          {% if link %}
+            <a class="nav-link" href="{{ item.path|url }}">
+          {% else %}
+            <a class="nav-link" href="{{ item.path }}">
+          {% endif %}
+          {{ item.label }}
+            {% if this.path == item.path %}
             <span class="sr-only">(current)</span>
             {% endif %}
           </a>
