Fix url to home in navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar no-background navbar-expand-lg navbar-dark fixed-top bg-primary">
-  <a class="navbar-brand" href="/">
+  <a class="navbar-brand" href="{{ '/'|url }}">
     <img src="{{ '/static/images/tor-logo.svg'|asseturl }}" >
     <span class="sr-only">Tor Logo</span>
   </a>
