--- a/templates/intro.html
+++ b/templates/intro.html
@@ -30,16 +30,32 @@
 <div class="row mb-1">
   <div class="col-12">
     <div class="row mt-4 mb-2">
-      <form action="https://donate.torproject.org/subscription-request" method="POST" class="form-wide">
+      <form action="https://tor-donate.local/subscription-request" method="POST" class="form-wide">
+        <input type="hidden" name="returnToReferrer" value="1" />
         <div class="form-group row">
-          <div class="col-sm-10">
+          <div class="col-sm-12 errors">
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-12">
             <input class="form-control form-control-lg form-required" id="email"
                 name="email" placeholder="* Email Address" value="" type="email" />
           </div>
-          <input class="donate btn btn-lg btn-success btn-block col-2" value="Join" type="submit" />
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-6 captcha">
+            <input id="captcha" type="text" class="form-control form-control-lg form-required" data-name="captcha" data-stripe="captcha" aria-label="captcha" name="captcha" size="4" placeholder="* Enter the 4 letters (case insenstive) that appear below">
+            <img src="https://tor-donate.local/captcha" border="0" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-12">
+            <input class="donate btn btn-lg btn-success btn-block col-2" value="Join" type="submit" />
+          </div>
         </div>
       </form>
     </div>
   </div>
 </div>
+<script src="{{ '/static/js/errors.js'|asseturl }}" ></script>
 {% endblock %}
