--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{{ '/static/style.css'|asseturl }}">
+<script src="{{ '/static/js/errors.js'|asseturl }}"></script>
 
 <title>{% block title %}{{ this.title }}{% endblock %}</title>
 <body>
