Added subscription-confirmed and request-sent
With moving all of the display pages that exist on the donate site, we
need these sebuscription request sent and subscription confirmed pages.

Issue #48283

--- a/templates/page-no-sidebar.html
+++ b/templates/page-no-sidebar.html
@@ -16,7 +16,7 @@
           <h2>{{ this.title }}</h2>
           <div class="errors">
           </div>
-          {% block body %}{% endblock %}
+          {% block body %}{{ this.body }}{% endblock %}
           <script src="{{ '/static/js/errors.js'|asseturl }}" ></script>
         </main>
       </div>
