Updated to URL we'll use for launch
I think we're going to use donate-api.torproject.org for launch so I'm
updating the form URL to that.

--- a/templates/intro.html
+++ b/templates/intro.html
@@ -30,7 +30,7 @@
 <div class="row mb-1">
   <div class="col-12">
     <div class="row mt-4 mb-2">
-      <form action="https://donate.torproject.org/subscription-request" method="POST" class="form-wide">
+      <form action="https://donate-api.torproject.org/subscription-request" method="POST" class="form-wide">
         <input type="hidden" name="returnToReferrer" value="1" />
         <div class="form-group row">
           <div class="col-sm-12 errors">
