--- a/templates/intro.html
+++ b/templates/intro.html
@@ -44,7 +44,7 @@
         </div>
         <div class="form-group row">
           <div class="col-sm-6 captcha">
-            <input id="captcha" type="text" class="form-control form-control-lg form-required" data-name="captcha" data-stripe="captcha" aria-label="captcha" name="captcha" size="4" placeholder="* Enter the 4 letters (case insenstive) that appear below">
+            <input id="captcha" type="text" class="form-control form-control-lg form-required" data-name="captcha" data-stripe="captcha" aria-label="captcha" name="captcha" size="4" placeholder="* Enter the 4 letters (case insensitive) that appear below">
             <img src="https://donate-api.torproject.org/captcha" border="0" />
           </div>
         </div>
