--- a/templates/intro.html
+++ b/templates/intro.html
@@ -15,7 +15,7 @@
   <div class="col-12">
     <div class="row mt-4 mb-2">
       <p>
-        👉 <a href="https://donate.torproject.org/subscribe">Click here to sign up for our email newsletter.</a>
+        👉 <a href="https://donate.torproject.org/subscribe">Click here to sign up for Tor News, our email newsletter.</a>
       </p>
     </div>
   </div>
